[gd_scene load_steps=2 format=3 uid="uid://chlp3qfdp3ncw"]

[ext_resource type="Script" path="res://Scripts/end_menu.gd" id="1_4vaob"]

[node name="endMenu" type="Control"]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 3
anchor_left = -0.435
anchor_top = -0.474
anchor_right = 0.555
anchor_bottom = 0.5
offset_left = 501.12
offset_top = 307.152
offset_right = 512.64
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4vaob")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.444
anchor_top = -0.463
anchor_right = 0.556
anchor_bottom = 0.537
offset_left = -0.511963
offset_top = 0.0240173
offset_right = -0.512085
offset_bottom = 0.0239868
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="restartButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Restart"

[node name="backMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Back Menu"

[node name="exitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Exit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/restartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/backMenuButton" to="." method="_on_back_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/exitButton" to="." method="_on_exit_button_pressed"]
